--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "undoZen <opensouce@undozen.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.3.1"
+    "config": "^0.4.35",
+    "express": "^4.3.1",
+    "hiredis": "^0.1.16",
+    "q": "^1.0.1",
+    "redis": "^0.10.3"
   }
 }
