--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "config": "^0.4.35",
     "express": "^4.3.1",
     "hiredis": "^0.1.16",
+    "lodash": "^2.4.1",
     "q": "^1.0.1",
     "redis": "^0.10.3"
   }
