prepare doc model database

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "source of mianbizhe.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha -w"
   },
   "author": "undoZen <opensouce@undozen.com>",
   "license": "MIT",
@@ -12,7 +12,9 @@
     "config": "^0.4.35",
     "express": "^4.3.1",
     "hiredis": "^0.1.16",
+    "knex": "^0.5.14",
     "lodash": "^2.4.1",
+    "mysql": "^2.3.0",
     "q": "^1.0.1",
     "redis": "^0.10.3"
   }
