--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hiredis": "^0.1.16",
     "knex": "^0.5.14",
     "lodash": "^2.4.1",
+    "marked": "^0.3.2",
     "mysql": "^2.3.0",
     "q": "^1.0.1",
     "redis": "^0.10.3"
