--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "^0.4.35",
+    "debug": "^0.8.1",
     "express": "^4.3.1",
     "hiredis": "^0.1.16",
     "knex": "^0.5.14",
