--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "undoZen <opensouce@undozen.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.4.3",
     "config": "^0.4.35",
     "debug": "^0.8.1",
     "express": "^4.3.1",
@@ -18,6 +19,10 @@
     "marked": "^0.3.2",
     "mysql": "^2.3.0",
     "q": "^1.0.1",
+    "q-locals": "^0.3.0",
     "redis": "^0.10.3"
+  },
+  "devDependencies": {
+    "supertest": "^0.13.0"
   }
 }
