--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "undoZen <opensouce@undozen.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.5.1",
     "config": "^0.4.35",
     "debug": "^0.8.1",
+    "errto": "^0.2.1",
     "express": "^4.3.1",
     "hiredis": "^0.1.16",
     "knex": "^0.5.14",
@@ -18,6 +20,10 @@
     "marked": "^0.3.2",
     "mysql": "^2.3.0",
     "q": "^1.0.1",
+    "q-locals": "^0.3.2",
     "redis": "^0.10.3"
+  },
+  "devDependencies": {
+    "supertest": "^0.13.0"
   }
 }
