--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "errto": "^0.2.1",
     "express": "^4.3.1",
     "hiredis": "^0.1.16",
+    "is-type": "0.0.1",
     "knex": "^0.5.14",
+    "level-sublevel": "^5.2.0",
+    "level-ttl": "^0.6.1",
+    "leveldown": "^0.10.2",
+    "levelplus": "0.0.5",
+    "levelup": "^0.18.6",
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
     "mysql": "^2.3.0",
@@ -24,6 +30,7 @@
     "redis": "^0.10.3"
   },
   "devDependencies": {
+    "rimraf": "^2.2.8",
     "supertest": "^0.13.0"
   }
 }
