sha1 -> sha512, utils.js -> lib/crypt.js

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.4.3",
-    "config": "^0.4.35",
+    "config": "^0.4.37",
     "debug": "^0.8.1",
-    "ef": "0.0.2",
+    "errto": "^0.2.1",
     "express": "^4.3.1",
+    "fn-arity": "0.0.1",
     "hiredis": "^0.1.16",
-    "knex": "^0.5.14",
+    "knex": "^0.5.15",
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
     "mysql": "^2.3.0",
