--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "source of mianbizhe.com",
   "main": "index.js",
   "scripts": {
-    "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit > test/result.xml",
+    "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit 1> test/result.xml",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha -w"
   },
   "author": "undoZen <opensouce@undozen.com>",
