--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "hiredis": "^0.1.16",
     "knex": "^0.5.15",
     "lodash": "^2.4.1",
+    "log4js": "^0.6.16",
+    "log4js-or-debug": "^0.1.1",
     "marked": "^0.3.2",
+    "mkdirp": "^0.5.0",
     "mysql": "^2.3.0",
     "q": "^1.0.1",
     "q-locals": "^0.3.0",
