--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "source of mianbizhe.com",
   "main": "index.js",
   "scripts": {
-    "start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
-    "restart": "npm install && pm2 restart mm",
+    "pm2start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
+    "pm2restart": "npm install && pm2 restart mm",
     "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit 1> test/result.xml",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha -w"
   },
