--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mysql": "^2.4.2",
     "q": "^1.0.1",
     "q-locals": "^0.3.0",
-    "redis": "^0.10.3"
+    "redis": "^0.10.3",
+    "simple-migrate": "^0.1.1"
   },
   "devDependencies": {
     "mocha": "^1.21.1",
