--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "pm2start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
     "pm2restart": "npm install && pm2 restart mm",
+    "pm2reload": "npm install && pm2 reload mm",
     "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit 1> test/result.xml",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha -w",
     "db-migrate": "NODE_ENV=production node ./db/migrate"
