--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pm2start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
     "pm2restart": "npm install && pm2 restart mm",
     "pm2reload": "npm install && pm2 reload mm",
-    "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit 1> test/result.xml",
+    "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit-file",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha -w",
     "db-migrate": "NODE_ENV=production node ./db/migrate"
   },
@@ -31,7 +31,8 @@
     "q": "^1.0.1",
     "q-locals": "^0.3.0",
     "redis": "^0.10.3",
-    "simple-migrate": "^0.1.1"
+    "simple-migrate": "^0.1.1",
+    "xunit-file": "0.0.5"
   },
   "devDependencies": {
     "mocha": "^1.21.1",
