--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "undoZen <opensouce@undozen.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.2.2",
     "body-parser": "^1.6.2",
     "config": "^0.4.37",
     "debug": "^1.0.4",
@@ -28,9 +29,11 @@
     "marked": "^0.3.2",
     "mkdirp": "^0.5.0",
     "mysql": "^2.4.2",
+    "pg": "^3.4.0",
     "q": "^1.0.1",
     "q-locals": "^0.3.0",
     "redis": "^0.10.3",
+    "sequelize": "^2.0.0-dev12",
     "simple-migrate": "^0.1.3",
     "xunit-file": "0.0.5"
   },
