--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "source of mianbizhe.com",
   "main": "index.js",
   "scripts": {
+    "devsql": "cat db/create_database_and_dbuser.sql |sed -e 's/test/dev/g' |sed -e 's/TEST/DEV/g'",
     "pm2start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
     "pm2restart": "npm install && pm2 restart mm",
     "pm2reload": "npm install && pm2 reload mm",
     "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit-file",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha -w",
+    "test": "NODE_ENV=test mocha",
     "db-migrate": "NODE_ENV=production node ./db/migrate"
   },
   "author": "undoZen <opensouce@undozen.com>",
@@ -29,7 +30,7 @@
     "mysql": "^2.4.2",
     "q": "^1.0.1",
     "q-locals": "^0.3.0",
-    "simple-migrate": "^0.1.3",
+    "simple-migrate": "^0.2.0",
     "xunit-file": "0.0.5"
   },
   "devDependencies": {
