--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mianbz",
+  "private": true,
   "version": "0.0.1",
   "description": "source of mianbizhe.com",
   "main": "index.js",
@@ -13,6 +14,7 @@
     "pm2dstart": "npm install && DEBUG=mm:* NODE_ENV=production PORT=4200 pm2 start . --name mmdev",
     "pm2dend": "pm2 stop mmdev && pm2 delete mmdev",
     "test-ci": "NODE_ENV=test ./node_modules/.bin/mocha --reporter xunit-file",
+    "test-watch": "nodemon -w . -x 'npm test'",
     "test": "NODE_ENV=test mocha",
     "db-migrate": "NODE_ENV=production node ./db/migrate"
   },
@@ -25,6 +27,7 @@
     "errto": "^0.2.1",
     "express": "^4.8.2",
     "fn-arity": "0.0.1",
+    "husky": "^0.6.1",
     "knex": "^0.5.15",
     "lodash": "^2.4.1",
     "log4js": "^0.6.16",
