--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "source of mianbizhe.com",
   "main": "index.js",
   "scripts": {
+    "prepush": "npm test",
     "devsql": "cat db/create_database_and_dbuser.sql |sed -e 's/test/dev/g' |sed -e 's/TEST/DEV/g'",
     "pm2start": "npm install && DEBUG=mm:* NODE_ENV=production PORT=5000 pm2 start . -i max --name mm",
     "pm2restart": "npm install && pm2 restart mm",
